--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.swiper-slide:not(.swiper-slide-active) a {
+swiper-slide:not(.swiper-slide-active) a {
     pointer-events: none;
     user-select: none;
 }
