--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+    width: 16px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #babac0;
+    border-radius: 16px;
+    border: 4px solid #f4f4f4;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background:#a0a0a5;
+    border: 3px solid #f4f4f4;
+}
+
 main, .products-list-reveal, .splash-text {
     opacity: 0;
     animation: reveal 1s forwards;
