--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,14 @@
 ::-webkit-scrollbar-thumb {
     background: #babac0;
     border-radius: 16px;
-    border: 4px solid #f4f4f4;
+    border: 5px solid transparent;
+    background-clip: content-box;
+}
+
+@media (pointer: fine) {
+    ::-webkit-scrollbar-thumb {
+        border: 4px solid #f4f4f4;
+    }
 }
 
 ::-webkit-scrollbar-thumb:hover {
