--- a/app/globals.css
+++ b/app/globals.css
@@ -79,4 +79,8 @@ swiper-slide:not(.swiper-slide-active) a {
 .information-rich-text p {
     font-weight: 500; 
     margin-bottom: .5rem;
+
+    @media (min-width: 1024px) {
+        font-size: 1.125rem;
+    }
 }
